i18n: Finalize Settings Translations (HTML/JS/JSON)
- Removed hardcoded strings from settings.html and settings_bundled.js
- Updated en.json and pt_BR.json with comprehensive keys
- Created es.json for Spanish support
- Cleaned up duplicate translation keys
- Validated JSON syntax

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -215,8 +215,152 @@
     "common.genre": "Genre",
     "common.custom_tags": "Custom Tags",
     "common.wishlist": "Wishlist",
+    "common.files": "Files",
+    "common.updated_plural": "Updated",
+    "stats.games_by_genre": "Games by Genre",
+    "stats.no_games_found": "No games found.",
+    "settings.api_saved": "API Settings saved",
+    "settings.api_save_error": "Error saving settings",
+    "settings.connection_ok": "Connection OK! Found: ",
+    "settings.connection_fail_key": "No result found. Check your key.",
+    "settings.connection_error": "Connection error: ",
+    "settings.refresh_metadata": "Refresh Metadata",
+    "settings.refresh_metadata_confirm": "This will fetch metadata for ALL identified items. It may take several minutes. Continue?",
+    "settings.refresh_all": "Refresh All",
+    "settings.refresh_started": "Bulk update started in background.",
+    "settings.refresh_error": "Error starting update",
+    "settings.tag_name_required": "Tag name is required",
+    "settings.tag_created": "Tag created successfully",
+    "settings.tag_create_error": "Error creating tag: ",
+    "settings.delete_tag": "Delete Tag",
+    "settings.delete_tag_confirm": "Really delete this tag? This will remove it from all games.",
+    "settings.tag_deleted": "Tag deleted",
+    "settings.tag_delete_error": "Error deleting tag",
+    "settings.no_activity": "No activity recorded.",
+    "settings.no_file_chosen": "No file chosen",
+    "settings.no_paths": "No paths configured",
+    "settings.scan_folder": "Scan folder",
+    "settings.remove_path": "Remove path",
+    "settings.watchdog_monitoring": "Monitoring",
+    "settings.watchdog_not_monitoring": "Not monitoring",
+    "settings.watchdog_no_libs": "No libraries configured",
+    "settings.no_users": "No users found",
+    "settings.you": "You",
+    "settings.access_shop": "Shop",
+    "settings.access_backup": "Backup",
+    "settings.access_admin": "Admin",
+    "settings.priorities_updated": "Priorities updated",
+    "settings.priorities_fail": "Failed to update priorities",
+    "settings.tdb_no_date": "No date found.",
+    "settings.no_errors": "No identification errors found.",
+    "settings.manual_id": "Manual Identification",
+    "settings.recognize": "Recognize",
+    "settings.delete_file": "Delete File",
+    "settings.delete_file_confirm": "Really delete this file from DISK? This cannot be undone.",
+    "settings.file_deleted": "File deleted",
+    "settings.file_delete_error": "Error deleting: ",
+    "settings.no_file_selected": "No file selected",
+    "settings.delete_files": "Delete Files",
+    "settings.delete_files_disk_confirm": " file(s) from DISK? This cannot be undone.",
+    "settings.files_deleted_success": " file(s) deleted successfully",
+    "settings.files_delete_error": " error(s) deleting",
+    "settings.delete_user_confirm": "Are you sure you want to delete user",
+    "settings.remove_path_modal": "Remove path",
+    "settings.path_remove_warn": "This will not delete your files.",
+    "settings.user_deleted": "User deleted",
+    "settings.path_removed": "Path removed",
+    "settings.fill_fields": "Fill all fields",
+    "settings.user_created": "User created successfully",
+    "settings.user_create_fail": "Failed to create user",
+    "settings.path_required": "Path is required",
+    "settings.path_added": "Path added",
+    "settings.path_add_fail": "Failed to add path",
+    "settings.scan_started": "Scan started...",
+    "settings.scan_triggered": "Scan triggered!",
+    "settings.cleanup_orphaned": "Cleanup Orphans",
+    "settings.cleanup_confirm": "Removes missing files from DB. Cannot be undone.",
+    "settings.btn_cleanup": "Start Cleanup",
+    "settings.fetching_dates": "Fetching remote dates...",
+    "settings.delete_source": "Delete Source",
+    "settings.delete_source_confirm": "Really delete source ",
+    "settings.source_deleted": "Source deleted",
+    "settings.source_name_url_req": "Name and URL required",
+    "settings.menu_title": "Settings",
+    "settings.menu_general": "General",
+    "settings.menu_auth": "Authentication",
+    "settings.menu_library": "Library",
+    "settings.menu_explorer": "File Explorer",
+    "settings.menu_renaming": "Renaming",
+    "settings.menu_titledb": "TitleDB",
+    "settings.menu_shop": "Shop",
+    "settings.menu_errors": "Errors/Identification",
+    "settings.menu_tags": "Tags",
+    "settings.menu_activity": "Activity",
+    "settings.menu_backups": "Backups",
+    "settings.menu_apis": "External APIs",
+    "settings.menu_tokens": "API Tokens",
+    "settings.menu_system": "System",
+    "settings.menu_help": "Help",
+    "settings.alert_admin_missing": "Admin Account Missing!",
+    "settings.alert_admin_missing_desc": "Auth disabled. Anyone can change settings.",
+    "settings.alert_keys_missing": "Console Keys Missing!",
+    "settings.alert_keys_missing_desc": "Required to decrypt content.",
+    "settings.guide": "Guide",
+    "settings.general_config": "General Configuration",
+    "settings.console_keys": "Console Keys",
+    "settings.choose_file": "Choose file...",
+    "settings.save_update": "Save & Update",
+    "settings.checking": "Checking...",
+    "settings.watchdog_checking": "Checking watchdog status...",
+    "settings.last_scan": "Last Scan",
+    "settings.select_folder_modal": "Select Folder",
+    "settings.current_path": "Current Path:",
+    "settings.select_current_folder": "Select Current Folder",
+    "settings.stats_deleted": "files deleted",
+    "settings.stats_orphans": "orphans cleaned",
+    "settings.library_explorer": "Library File Explorer",
+    "settings.explorer_desc": "View all indexed physical files with details.",
+    "settings.search_placeholder": "Search in all folders...",
+    "settings.renaming_auto": "Automatic Renaming",
+    "settings.renaming_desc": "Use placeholders to define patterns:",
+    "settings.renaming_base": "Base Game Pattern (NSP/XCI)",
+    "settings.renaming_update": "Update Pattern",
+    "settings.renaming_dlc": "DLC Pattern",
+    "settings.save_patterns": "Save Patterns",
+    "settings.preview": "Preview",
+    "settings.rename_now": "Rename All Now",
+    "settings.preview_title": "Preview",
+    "settings.shop_public_web": "Public Profile (Web)",
+    "common.loading_config": "Loading settings...",
+    "common.loading": "Loading...",
+    "common.cancel": "Cancel",
+    "common.refresh": "Refresh",
+    "common.search": "Search",
+    "common.type": "Type",
+    "common.all": "All",
+    "common.identified": "Identified",
+    "common.files_found": "files found",
+    "common.file_path": "File / Path",
+    "common.identified_title": "Identified Title",
+    "common.size": "Size",
+    "common.actions": "Actions",
+    "common.games": "Games",
     "modal.add_tag_placeholder": "Add Tag...",
     "modal.refresh_ratings": "Refresh Ratings",
     "modal.game_not_in_library": "Game not in library",
-    "modal.edit_metadata": "Edit Metadata"
+    "modal.edit_metadata": "Edit Metadata",
+    "settings.new_token": "New Token",
+    "settings.token_prefix": "Prefix",
+    "settings.token_created_at": "Created At",
+    "settings.token_last_use": "Last Used",
+    "settings.token_modal_title": "New API Token",
+    "settings.token_name_label": "Token/App Name",
+    "settings.token_placeholder": "Ex: My Python Script",
+    "settings.token_success_title": "Token Generated Successfully!",
+    "settings.token_copy_warn": "Copy this token now. You won't see it again.",
+    "common.generate": "Generate",
+    "common.close": "Close",
+    "settings.delete_user_modal": "Delete User",
+    "settings.keep_user": "Keep User",
+    "settings.perm_delete": "Permanently Delete"
 }
