--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -224,8 +224,152 @@
     "common.genre": "Gênero",
     "common.custom_tags": "Tags Personalizadas",
     "common.wishlist": "Lista de Desejos",
+    "common.files": "Arquivos",
+    "common.updated_plural": "atualizados",
+    "stats.games_by_genre": "Jogos por Gênero",
+    "stats.no_games_found": "Nenhum jogo encontrado.",
+    "settings.api_saved": "Configurações de API salvas",
+    "settings.api_save_error": "Erro ao salvar configurações",
+    "settings.connection_ok": "Conexão OK! Encontrado: ",
+    "settings.connection_fail_key": "Nenhum resultado encontrado. Verifique sua chave.",
+    "settings.connection_error": "Erro ao testar conexão: ",
+    "settings.refresh_metadata": "Atualizar Metadados",
+    "settings.refresh_metadata_confirm": "Isso buscará notas, tempo de jogo e screenshots para TODOS os itens identificados. Pode levar vários minutos. Deseja continuar?",
+    "settings.refresh_all": "Atualizar Todos",
+    "settings.refresh_started": "Atualização em massa iniciada em segundo plano.",
+    "settings.refresh_error": "Erro ao iniciar atualização",
+    "settings.tag_name_required": "Nome da tag é obrigatório",
+    "settings.tag_created": "Tag criada com sucesso",
+    "settings.tag_create_error": "Erro ao criar tag: ",
+    "settings.delete_tag": "Excluir Tag",
+    "settings.delete_tag_confirm": "Deseja realmente excluir esta tag? Esta ação removerá a tag de todos os jogos associados.",
+    "settings.tag_deleted": "Tag excluída",
+    "settings.tag_delete_error": "Erro ao excluir tag",
+    "settings.no_activity": "Nenhuma atividade registrada.",
+    "settings.no_file_chosen": "Nenhum arquivo escolhido",
+    "settings.no_paths": "Nenhum caminho configurado na biblioteca",
+    "settings.scan_folder": "Escanear esta pasta",
+    "settings.remove_path": "Remover caminho",
+    "settings.watchdog_monitoring": "Monitorando",
+    "settings.watchdog_not_monitoring": "Não monitorando",
+    "settings.watchdog_no_libs": "Nenhuma biblioteca configurada",
+    "settings.no_users": "Nenhum usuário encontrado",
+    "settings.you": "Você",
+    "settings.access_shop": "Loja",
+    "settings.access_backup": "Backup",
+    "settings.access_admin": "Admin",
+    "settings.priorities_updated": "Prioridades atualizadas",
+    "settings.priorities_fail": "Falha ao atualizar prioridades",
+    "settings.tdb_no_date": "Nenhuma data encontrada.",
+    "settings.no_errors": "Nenhum erro de identificação encontrado.",
+    "settings.manual_id": "Identificar Manualmente",
+    "settings.recognize": "Reconhecer",
+    "settings.delete_file": "Excluir Arquivo",
+    "settings.delete_file_confirm": "Deseja realmente excluir este arquivo do DISCO? Esta ação não pode ser desfeita.",
+    "settings.file_deleted": "Arquivo excluído",
+    "settings.file_delete_error": "Erro ao excluir: ",
+    "settings.no_file_selected": "Nenhum arquivo selecionado",
+    "settings.delete_files": "Excluir Arquivos",
+    "settings.delete_files_disk_confirm": " arquivo(s) do DISCO? Esta ação não pode ser desfeita.",
+    "settings.files_deleted_success": " arquivo(s) excluído(s) com sucesso",
+    "settings.files_delete_error": " erro(s) ao excluir",
+    "settings.delete_user_confirm": "Tem certeza que deseja excluir o usuário",
+    "settings.remove_path_modal": "Remover caminho",
+    "settings.path_remove_warn": "Isso não apagará seus arquivos do disco.",
+    "settings.user_deleted": "Usuário excluído",
+    "settings.path_removed": "Caminho removido",
+    "settings.fill_fields": "Preencha todos os campos",
+    "settings.user_created": "Usuário criado com sucesso",
+    "settings.user_create_fail": "Falha ao criar usuário",
+    "settings.path_required": "Caminho é obrigatório",
+    "settings.path_added": "Caminho adicionado",
+    "settings.path_add_fail": "Falha ao adicionar caminho",
+    "settings.scan_started": "Scan iniciado...",
+    "settings.scan_triggered": "Scan disparado!",
+    "settings.cleanup_orphaned": "Limpar Registros Órfãos",
+    "settings.cleanup_confirm": "Isso removerá do banco de dados todos os registros de arquivos que não existem mais e apps 'owned' sem arquivos. Esta ação não pode ser desfeita.",
+    "settings.btn_cleanup": "Limpar Agora",
+    "settings.fetching_dates": "Buscando datas remotas em segundo plano...",
+    "settings.delete_source": "Excluir Fonte",
+    "settings.delete_source_confirm": "Deseja realmente excluir a fonte ",
+    "settings.source_deleted": "Fonte excluída",
+    "settings.source_name_url_req": "Nome e URL são obrigatórios",
+    "settings.menu_title": "Configurações",
+    "settings.menu_general": "Geral",
+    "settings.menu_auth": "Autenticação",
+    "settings.menu_library": "Biblioteca",
+    "settings.menu_explorer": "Explorador de Arquivos",
+    "settings.menu_renaming": "Renomeação",
+    "settings.menu_titledb": "TitleDB",
+    "settings.menu_shop": "Loja",
+    "settings.menu_errors": "Erros/Identificação",
+    "settings.menu_tags": "Tags",
+    "settings.menu_activity": "Atividade",
+    "settings.menu_backups": "Backups",
+    "settings.menu_apis": "APIs Externas",
+    "settings.menu_tokens": "Tokens de API",
+    "settings.menu_system": "Sistema",
+    "settings.menu_help": "Ajuda",
+    "settings.alert_admin_missing": "Conta Admin Ausente!",
+    "settings.alert_admin_missing_desc": "Autenticação desativada. Qualquer um pode acessar e alterar configurações.",
+    "settings.alert_keys_missing": "Chaves do console ausentes!",
+    "settings.alert_keys_missing_desc": "Necessário para decriptar conteúdo Nintendo.",
+    "settings.guide": "Guia",
+    "settings.general_config": "Configuração Geral",
+    "settings.console_keys": "Chaves do Console",
+    "settings.choose_file": "Escolher arquivo...",
+    "settings.save_update": "Salvar & Atualizar",
+    "settings.checking": "Verificando...",
+    "settings.watchdog_checking": "Verificando status do watchdog...",
+    "settings.last_scan": "Último Scan",
+    "settings.select_folder_modal": "Selecionar Pasta",
+    "settings.current_path": "Caminho Atual:",
+    "settings.select_current_folder": "Selecionar Pasta Atual",
+    "settings.stats_deleted": "arquivos deletados",
+    "settings.stats_orphans": "órfãos limpos",
+    "settings.library_explorer": "Explorador de Arquivos da Biblioteca",
+    "settings.explorer_desc": "Visualize todos os arquivos físicos indexados na biblioteca com detalhes.",
+    "settings.search_placeholder": "Buscar em todas as pastas...",
+    "settings.renaming_auto": "Renomeação Automática",
+    "settings.renaming_desc": "Use os seguintes placeholders para definir seus padrões:",
+    "settings.renaming_base": "Padrão para Jogo Base (NSP/XCI)",
+    "settings.renaming_update": "Padrão para Update",
+    "settings.renaming_dlc": "Padrão para DLC",
+    "settings.save_patterns": "Salvar Padrões",
+    "settings.preview": "Prever",
+    "settings.rename_now": "Renomear Tudo Agora",
+    "settings.preview_title": "Pré-visualização",
+    "settings.shop_public_web": "Perfil Público (Web)",
+    "common.loading_config": "Carregando configurações...",
+    "common.loading": "Carregando...",
+    "common.cancel": "Cancelar",
+    "common.refresh": "Atualizar",
+    "common.search": "Buscar",
+    "common.type": "Tipo",
+    "common.all": "Todos",
+    "common.identified": "Identificado",
+    "common.files_found": "arquivos encontrados",
+    "common.file_path": "Arquivo / Caminho",
+    "common.identified_title": "Título Identificado",
+    "common.size": "Tamanho",
+    "common.actions": "Ações",
+    "common.games": "Jogos",
     "modal.add_tag_placeholder": "Adicionar Tag...",
     "modal.refresh_ratings": "Atualizar Classificações",
     "modal.game_not_in_library": "Jogo não está na biblioteca",
-    "modal.edit_metadata": "Editar Metadados"
+    "modal.edit_metadata": "Editar Metadatos",
+    "settings.new_token": "Novo Token",
+    "settings.token_prefix": "Prefixo",
+    "settings.token_created_at": "Criado em",
+    "settings.token_last_use": "Último Uso",
+    "settings.token_modal_title": "Novo Token de API",
+    "settings.token_name_label": "Nome do Token/Aplicação",
+    "settings.token_placeholder": "Ex: Meu Script Python",
+    "settings.token_success_title": "Token Gerado com Sucesso!",
+    "settings.token_copy_warn": "Copie este token agora. Você não poderá vê-lo novamente.",
+    "common.generate": "Gerar",
+    "common.close": "Fechar",
+    "settings.delete_user_modal": "Excluir Usuário",
+    "settings.keep_user": "Manter Usuário",
+    "settings.perm_delete": "Excluir Permanentemente"
 }
