i18n: Dynamic Language Selection, Translated Help & Nav Menus. Refined settings page i18n.

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -362,5 +362,49 @@
     "common.close": "Close",
     "settings.delete_user_modal": "Delete User",
     "settings.keep_user": "Keep User",
-    "settings.perm_delete": "Permanently Delete"
+    "settings.perm_delete": "Permanently Delete",
+    "nav.library": "Library",
+    "nav.stats": "Statistics",
+    "nav.wishlist": "Wishlist",
+    "nav.upcoming": "Upcoming",
+    "nav.settings": "Settings",
+    "nav.search_placeholder": "Search games...",
+    "nav.toggle_theme": "Toggle Theme",
+    "nav.logout": "Logout",
+    "nav.login": "Login",
+    "settings.help_title": "Help and Documentation",
+    "settings.help_shortcuts": "Keyboard Shortcuts",
+    "settings.help_shortcut_key": "Shortcut",
+    "settings.help_shortcut_action": "Action",
+    "settings.shortcut_focus_search": "Focus search",
+    "settings.shortcut_close_modals": "Close modals",
+    "settings.shortcut_pagination": "Navigate pagination",
+    "settings.shortcut_edit_metadata": "Edit metadata",
+    "settings.in_modal": "(in modal)",
+    "settings.shortcut_toggle_wishlist": "Toggle Wishlist",
+    "settings.shortcut_download": "Download file",
+    "settings.shortcut_open_game": "Open selected game",
+    "settings.help_guide_title": "Quick Start Guide",
+    "settings.guide_library": "Setup Library:",
+    "settings.guide_library_text": "Go to \"Library\" and add the folder path containing your NSP/NSZ/XCI games.",
+    "settings.guide_titledb": "Update TitleDB:",
+    "settings.guide_titledb_text": "Click \"Update Now\" in the TitleDB tab to download game information.",
+    "settings.guide_scan": "Scan:",
+    "settings.guide_scan_text": "After adding the folder, click \"Scan Library\" to identify your games.",
+    "settings.guide_shop": "Configure Shop:",
+    "settings.guide_shop_text": "In the \"Shop\" tab, set the hostname and enable the shop for Tinfoil.",
+    "settings.guide_connect": "Connect Tinfoil:",
+    "settings.guide_connect_text": "On Switch, add <code>protocol://HOST:5000</code> in File Browser.",
+    "settings.help_faq_title": "FAQ",
+    "settings.faq_q1": "How to identify games appearing as \"Unknown\"?",
+    "settings.faq_a1": "Go to \"Errors/Identification\", find the game and click \"Recognize\". Search for the correct game on TitleDB and click \"Use Metadata\".",
+    "settings.faq_q2": "Why do some games not appear in the Tinfoil shop?",
+    "settings.faq_a2": "Check if: (1) The file was identified correctly, (2) You have \"shop_access\" permission on your user, (3) The shop is set to public or you have correct login.",
+    "settings.faq_q3": "How to add custom metadata?",
+    "settings.faq_a3": "Click on the game, then \"Edit Data\". You can fetch info from TitleDB or fill manually.",
+    "settings.faq_q4": "What is the difference between TitleDB sources?",
+    "settings.faq_a4": "MyFoil supports multiple sources with automatic fallback. Higher priority sources are tried first. We recommend keeping at least 2 sources active.",
+    "settings.help_links_title": "Useful Links",
+    "settings.link_report_bug": "Report Bug",
+    "settings.link_wiki": "Full Wiki"
 }
