--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -362,5 +362,49 @@
     "common.close": "Cerrar",
     "settings.delete_user_modal": "Borrar Usuario",
     "settings.keep_user": "Mantener Usuario",
-    "settings.perm_delete": "Borrar Permanentemente"
+    "settings.perm_delete": "Borrar Permanentemente",
+    "nav.library": "Biblioteca",
+    "nav.stats": "Estadísticas",
+    "nav.wishlist": "Lista de Deseos",
+    "nav.upcoming": "Próximos",
+    "nav.settings": "Ajustes",
+    "nav.search_placeholder": "Buscar juegos...",
+    "nav.toggle_theme": "Cambiar Tema",
+    "nav.logout": "Salir",
+    "nav.login": "Entrar",
+    "settings.help_title": "Ayuda y Documentación",
+    "settings.help_shortcuts": "Atajos de Teclado",
+    "settings.help_shortcut_key": "Atajo",
+    "settings.help_shortcut_action": "Acción",
+    "settings.shortcut_focus_search": "Enfocar búsqueda",
+    "settings.shortcut_close_modals": "Cerrar modales",
+    "settings.shortcut_pagination": "Navegar paginación",
+    "settings.shortcut_edit_metadata": "Editar metadatos",
+    "settings.in_modal": "(en modal)",
+    "settings.shortcut_toggle_wishlist": "Alternar Lista de Deseos",
+    "settings.shortcut_download": "Descargar archivo",
+    "settings.shortcut_open_game": "Abrir juego seleccionado",
+    "settings.help_guide_title": "Guía Rápida",
+    "settings.guide_library": "Configurar Biblioteca:",
+    "settings.guide_library_text": "Ve a \"Biblioteca\" y añade la ruta de la carpeta con tus juegos NSP/NSZ/XCI.",
+    "settings.guide_titledb": "Actualizar TitleDB:",
+    "settings.guide_titledb_text": "Haz clic en \"Actualizar Ahora\" en la pestaña TitleDB para descargar información de los juegos.",
+    "settings.guide_scan": "Escanear:",
+    "settings.guide_scan_text": "Tras añadir la carpeta, haz clic en \"Escanear Biblioteca\" para identificar tus juegos.",
+    "settings.guide_shop": "Configurar Tienda:",
+    "settings.guide_shop_text": "En la pestaña \"Tienda\", define el hostname y activa la tienda para Tinfoil.",
+    "settings.guide_connect": "Conectar Tinfoil:",
+    "settings.guide_connect_text": "En Switch, añade <code>protocol://HOST:5000</code> en File Browsers.",
+    "settings.help_faq_title": "Preguntas Frecuentes",
+    "settings.faq_q1": "¿Cómo identificar juegos que aparecen como \"Unknown\"?",
+    "settings.faq_a1": "Ve a \"Errores/Identificación\", encuentra el juego y haz clic en \"Reconocer\". Busca el juego correcto en TitleDB y haz clic en \"Usar Metadados\".",
+    "settings.faq_q2": "¿Por qué algunos juegos no aparecen en la tienda de Tinfoil?",
+    "settings.faq_a2": "Verifica si: (1) El archivo fue identificado correctamente, (2) Tienes permiso \"shop_access\" en tu usuario, (3) La tienda está configurada como pública o tienes login correcto.",
+    "settings.faq_q3": "¿Cómo añadir metadatos personalizados?",
+    "settings.faq_a3": "Haz clic en el juego, luego en \"Editar Datos\". Puedes buscar información en TitleDB o rellenar manualmente.",
+    "settings.faq_q4": "¿Cuál es la diferencia entre las fuentes de TitleDB?",
+    "settings.faq_a4": "MyFoil soporta múltiples fuentes con fallback automático. Las fuentes con mayor prioridad se intentan primero. Recomendamos mantener al menos 2 fuentes activas.",
+    "settings.help_links_title": "Enlaces Útiles",
+    "settings.link_report_bug": "Reportar Bug",
+    "settings.link_wiki": "Wiki Completa"
 }
