--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -371,5 +371,49 @@
     "common.close": "Fechar",
     "settings.delete_user_modal": "Excluir Usuário",
     "settings.keep_user": "Manter Usuário",
-    "settings.perm_delete": "Excluir Permanentemente"
+    "settings.perm_delete": "Excluir Permanentemente",
+    "nav.library": "Biblioteca",
+    "nav.stats": "Estatísticas",
+    "nav.wishlist": "Wishlist",
+    "nav.upcoming": "Próximos",
+    "nav.settings": "Configurações",
+    "nav.search_placeholder": "Buscar jogos...",
+    "nav.toggle_theme": "Alternar Tema",
+    "nav.logout": "Sair",
+    "nav.login": "Entrar",
+    "settings.help_title": "Ajuda e Documentação",
+    "settings.help_shortcuts": "Atalhos de Teclado",
+    "settings.help_shortcut_key": "Atalho",
+    "settings.help_shortcut_action": "Ação",
+    "settings.shortcut_focus_search": "Focar na busca",
+    "settings.shortcut_close_modals": "Fechar modais",
+    "settings.shortcut_pagination": "Navegar paginação",
+    "settings.shortcut_edit_metadata": "Editar metadados",
+    "settings.in_modal": "(no modal)",
+    "settings.shortcut_toggle_wishlist": "Toggle Wishlist",
+    "settings.shortcut_download": "Baixar arquivo",
+    "settings.shortcut_open_game": "Abrir jogo selecionado",
+    "settings.help_guide_title": "Guia Rápido",
+    "settings.guide_library": "Configurar Biblioteca:",
+    "settings.guide_library_text": "Vá em \"Biblioteca\" e adicione o caminho da pasta com seus jogos NSP/NSZ/XCI.",
+    "settings.guide_titledb": "Atualizar TitleDB:",
+    "settings.guide_titledb_text": "Clique em \"Atualizar Agora\" na aba TitleDB para baixar informações dos jogos.",
+    "settings.guide_scan": "Escanear:",
+    "settings.guide_scan_text": "Após adicionar a pasta, clique em \"Escanear Biblioteca\" para identificar seus jogos.",
+    "settings.guide_shop": "Configurar Loja:",
+    "settings.guide_shop_text": "Na aba \"Loja\", defina o hostname e ative a shop para o Tinfoil.",
+    "settings.guide_connect": "Conectar Tinfoil:",
+    "settings.guide_connect_text": "No Switch, adicione <code>protocol://HOST:5000</code> nas File Browsers.",
+    "settings.help_faq_title": "Perguntas Frequentes",
+    "settings.faq_q1": "Como identificar jogos que aparecem como \"Unknown\"?",
+    "settings.faq_a1": "Vá em \"Erros/Identificação\", encontre o jogo e clique em \"Reconhecer\". Busque o jogo correto no TitleDB e clique em \"Usar Metadados\".",
+    "settings.faq_q2": "Por que alguns jogos não aparecem na loja do Tinfoil?",
+    "settings.faq_a2": "Verifique se: (1) O arquivo foi identificado corretamente, (2) Você tem permissão \"shop_access\" no seu usuário, (3) A loja está configurada como pública ou você tem login correto.",
+    "settings.faq_q3": "Como adicionar metadados customizados?",
+    "settings.faq_a3": "Clique no jogo, depois em \"Editar Dados\". Você pode buscar informações no TitleDB ou preencher manualmente.",
+    "settings.faq_q4": "Qual a diferença entre as fontes do TitleDB?",
+    "settings.faq_a4": "MyFoil suporta múltiplas fontes com fallback automático. Fontes com maior prioridade são tentadas primeiro. Recomendamos manter ao menos 2 fontes ativas.",
+    "settings.help_links_title": "Links Úteis",
+    "settings.link_report_bug": "Reportar Bug",
+    "settings.link_wiki": "Wiki Completa"
 }
